--- a/src/lib/components/modes/textmode/TextMode.scss
+++ b/src/lib/components/modes/textmode/TextMode.scss
@@ -1,6 +1,11 @@
 @import '../../../styles';
 
 .jse-text-mode {
+  --internal-key-color: #{$value-color-number};
+  --internal-value-color-number: #{$value-color-number};
+  --internal-value-color-boolean: #{$value-color-boolean};
+  --internal-value-color-string: #{$value-color-string};
+  --internal-value-color-null: #{$value-color-null};
   flex: 1;
   box-sizing: border-box;
   display: flex;
