--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -15,7 +15,7 @@
   --jse-modal-code-background: #2f2f2f;
 
   /* tooltip in text mode */
-  --jse-tooltip-color: $text-color;
+  --jse-tooltip-color: var(--jse-text-color);
   --jse-tooltip-background: #4b4b4b;
   --jse-tooltip-border: 1px solid #737373;
   --jse-tooltip-action-button-color: inherit;
@@ -24,7 +24,7 @@
   /* panels: navigation bar, gutter, search box */
   --jse-panel-background: #333333;
   --jse-panel-background-border: 1px solid #464646;
-  --jse-panel-color: $text-color;
+  --jse-panel-color: var(--jse-text-color);
   --jse-panel-color-readonly: #737373;
   --jse-panel-border: 1px solid #3c3c3c;
   --jse-panel-button-color-highlight: #e5e5e5;
@@ -33,27 +33,27 @@
   /* navigation-bar */
   --jse-navigation-bar-background: #656565;
   --jse-navigation-bar-background-highlight: #7e7e7e;
-  --jse-navigation-bar-dropdown-color: $text-color;
+  --jse-navigation-bar-dropdown-color: var(--jse-text-color);
 
   /* context menu */
   --jse-context-menu-background: #4b4b4b;
   --jse-context-menu-background-highlight: #595959;
   --jse-context-menu-separator-color: #595959;
-  --jse-context-menu-color: $text-color;
+  --jse-context-menu-color: var(--jse-text-color);
   --jse-context-menu-pointer-background: #737373;
   --jse-context-menu-pointer-background-highlight: #818181;
-  --jse-context-menu-pointer-color: $context-menu-color;
+  --jse-context-menu-pointer-color: var(--jse-context-menu-color);
 
   /* contents: json key and values */
   --jse-key-color: #9cdcfe;
-  --jse-value-color: $text-color;
+  --jse-value-color: var(--jse-text-color);
   --jse-value-color-number: #b5cea8;
   --jse-value-color-boolean: #569cd6;
   --jse-value-color-null: #569cd6;
   --jse-value-color-string: #ce9178;
   --jse-value-color-url: #ce9178;
   --jse-delimiter-color: #949494;
-  --jse-edit-outline: 2px solid $text-color;
+  --jse-edit-outline: 2px solid var(--jse-text-color);
 
   /* contents: selected or hovered */
   --jse-selection-background-color: #464646;
@@ -85,14 +85,14 @@
 
   /* controls in modals: inputs, buttons, and `a` */
   --jse-input-background: #3d3d3d;
-  --jse-input-border: $main-border;
+  --jse-input-border: var(--jse-main-border);
   --jse-button-background: #808080;
   --jse-button-background-highlight: #7a7a7a;
   --jse-button-color: #e0e0e0;
   --jse-button-secondary-background: #494949;
   --jse-button-secondary-background-highlight: #5d5d5d;
   --jse-button-secondary-background-disabled: #9d9d9d;
-  --jse-button-secondary-color: $text-color;
+  --jse-button-secondary-color: var(--jse-text-color);
   --jse-a-color: #55abff;
   --jse-a-color-highlight: #4387c9;
 
