--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -97,8 +97,8 @@
   --jse-a-color-highlight: #4387c9;
 
   /* svelte-select */
-  --background: #3d3d3d;
-  --border: 1px solid #4f4f4f;
+  --jse-svelte-select-background: #3d3d3d;
+  --jse-svelte-select-border: 1px solid #4f4f4f;
   --list-background: #3d3d3d;
   --item-hover-bg: #505050;
   --multi-item-bg: #5b5b5b;
