--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -10,6 +10,7 @@
     --background: #{$svelte-select-background};
     --padding: #{$svelte-select-padding};
     --multi-select-padding: #{$svelte-select-multi-select-padding};
+    --font-size: #{$svelte-select-font-size};
     --height: 36px;
     --multi-item-height: 28px;
     --multi-item-margin: 2px;
