--- a/src/lib/components/modals/JSONEditorModal.scss
+++ b/src/lib/components/modals/JSONEditorModal.scss
@@ -5,9 +5,6 @@
   .jse-modal-contents {
     padding-top: 0;
 
-    --jse-theme-color: #{$modal-theme-color};
-    --jse-theme-color-highlight: #{$modal-theme-color-highlight};
-
     .jse-label {
       font-weight: bold;
       display: block;
@@ -31,6 +28,9 @@
       min-height: 150px;
       min-width: 0;
       display: flex;
+
+      --jse-theme-color: #{$modal-editor-theme-color};
+      --jse-theme-color-highlight: #{$modal-editor-theme-color-highlight};
     }
   }
 
