--- a/src/lib/themes/defaults.scss
+++ b/src/lib/themes/defaults.scss
@@ -44,7 +44,7 @@ $error-color: var(--jse-error-color, #ee5341);
 $warning-color: var(--jse-warning-color, #fdc539);
 
 /* main, menu, modal */
-$main-border: var(jse-main-border, 1px solid #d7d7d7);
+$main-border: var(--jse-main-border, 1px solid #d7d7d7);
 $menu-color: var(--jse-menu-color, $text-color-inverse);
 $menu-button-size: var(--jse-menu-button-size, 32px);
 $modal-background: var(--jse-modal-background, #f5f5f5);
