fix: editors in transform modal not having a border

--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -132,7 +132,7 @@
     box-shadow: none;
     box-sizing: border-box;
 
-    --jse-main-border: $input-border;
+    --jse-main-border: #{$input-border};
   }
 
   input,
