--- a/src/lib/components/modals/repair/JSONRepairComponent.scss
+++ b/src/lib/components/modals/repair/JSONRepairComponent.scss
@@ -4,12 +4,15 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  background: var(--jse-background-color);
-  color: var(--jse-text-color);
+  background: $background-color;
+  color: $text-color;
 
   .jse-menu {
     .jse-info {
-      padding: 0 $padding;
+      padding: $padding-half;
+      font-family: $font-family;
+      font-size: $font-size;
+      vertical-align: center;
     }
   }
 
@@ -17,10 +20,10 @@
     flex: 1;
     border: none;
     padding: $contents-padding;
-    font-family: var(--jse-font-family-mono);
-    font-size: var(--jse-font-size-mono);
-    background: var(--jse-background-color);
-    color: var(--jse-text-color);
+    font-family: $font-family-mono;
+    font-size: $font-size-mono;
+    background: $input-background;
+    color: $text-color;
 
     resize: none;
     outline: none;
