fix: styling issue with a button text color in dark mode

--- a/src/lib/themes/defaults.scss
+++ b/src/lib/themes/defaults.scss
@@ -174,7 +174,7 @@ $button-primary-background-highlight: var(
   $theme-color-highlight
 );
 $button-primary-background-disabled: var(--jse-button-primary-background-disabled, #9d9d9d);
-$button-primary-color: var(--jse-button-primary-color, $text-color-inverse);
+$button-primary-color: var(--jse-button-primary-color, $white);
 $button-secondary-background: var(--jse-button-secondary-background, #d3d3d3);
 $button-secondary-background-highlight: var(--jse-button-secondary-background-highlight, #e1e1e1);
 $button-secondary-background-disabled: var(--jse-button-secondary-background-disabled, #9d9d9d);
