Use flex-start instead of start for align-items

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -35,7 +35,7 @@
 
   .jse-contents {
     flex: 1;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: column;
     display: flex;
     overflow: auto;
