--- a/src/lib/components/controls/contextmenu/ContextMenu.scss
+++ b/src/lib/components/controls/contextmenu/ContextMenu.scss
@@ -33,7 +33,7 @@
 
       display: flex;
       flex-direction: row;
-      align-items: start;
+      align-items: flex-start;
       gap: $padding;
       border-radius: $border-radius;
 
