--- a/src/lib/components/modes/tablemode/tag/InlineValue.scss
+++ b/src/lib/components/modes/tablemode/tag/InlineValue.scss
@@ -17,4 +17,14 @@
   &.jse-selected {
     background: $selection-background-color;
   }
+
+  &.jse-highlight {
+    background-color: $search-match-color;
+    outline: $search-match-outline;
+
+    &.jse-active {
+      background-color: $search-match-active-color;
+      outline: $search-match-active-outline;
+    }
+  }
 }
