--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -20,7 +20,7 @@
   .jse-search-box-container {
     position: relative;
     height: 0;
-    top: $padding;
+    top: calc($line-height + 2 * $padding);
     margin-right: calc($padding + 20px);
     margin-left: $padding;
     text-align: right;
@@ -50,6 +50,7 @@
     display: flex;
     overflow: auto;
     overflow-anchor: none; // important to prevent Chrome from adjusting the scrollTop based on changing contents (causing an infinite loop)
+    scrollbar-gutter: stable;
 
     border-left: $main-border;
     border-right: $main-border;
