--- a/src/lib/components/controls/SearchBox.scss
+++ b/src/lib/components/controls/SearchBox.scss
@@ -78,15 +78,13 @@ $input-min-width: 50px;
         display: flex;
         align-items: center;
         position: relative;
-        padding-left: $padding-section-left;
 
         .jse-search-icon {
           color: inherit;
           cursor: inherit;
           background: inherit;
-          position: absolute;
-          top: $padding-half;
-          left: $padding-half;
+          width: $padding-section-left;
+          text-align: center;
         }
 
         label.jse-search-input-label {
