--- a/src/lib/themes/defaults.scss
+++ b/src/lib/themes/defaults.scss
@@ -42,6 +42,7 @@ $text-readonly: var(--jse-text-readonly, #8d8d8d);
 $text-color-inverse: var(--jse-text-color-inverse, $white);
 $error-color: var(--jse-error-color, #ee5341);
 $warning-color: var(--jse-warning-color, #fdc539);
+$info-color: var(--jse-info-color, #4f91ff);
 
 /* main, menu, modal */
 $main-border: var(--jse-main-border, (1px solid #d7d7d7));
