feat: implement a fullscreen button in the nested content modal and transform modal

--- a/src/lib/components/modals/Header.scss
+++ b/src/lib/components/modals/Header.scss
@@ -12,14 +12,6 @@
   }
 
   button {
-    border: none;
-    background: transparent;
-    min-width: 32px;
-    color: inherit;
-    cursor: pointer;
-
-    &:hover {
-      background: rgba(255, 255, 255, 0.1);
-    }
+    @include jse-modal-menu-button;
   }
 }
